tests/specs/ecosystem/geacko/resp3_parser/1_1_4.test
geacko/resp3-parser/1.1.4
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2488 [ERROR]: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
    super(...({} as never));
             ~~~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:13:14

TS2488 [ERROR]: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
    super(...({} as never));
             ~~~~~~~~~~~~~
    at file://<tmpdir>/src/types.ts:21:14

Found 2 errors.

